--- a/cart/package.json
+++ b/cart/package.json
@@ -8,11 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "currency.js": "^2.0.4",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-number-format": "^5.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
